@@ -273,6 +273,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP6220D(EXPERIMENTAL)
        Canon PIXMA iP6310D(EXPERIMENTAL)
        Canon PIXMA iP7100 (EXPERIMENTAL)
+       Canon PIXMA iP8100 (EXPERIMENTAL)
        Canon PIXMA MP375R
        Canon PIXMA MP190  (EXPERIMENTAL)
        Canon PIXMA MP470  (EXPERIMENTAL)
